--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-logger": "0.0.2",
     "gulp-nodemon": "^2.4.2",
     "gulp-rename": "^1.4.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -35,6 +35,7 @@
     "http-errors": "~1.6.3",
     "markdown-it": "^10.0.0",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "socket.io": "^2.3.0"
   }
 }
